--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -61,6 +61,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="AbP-Hs-FVk" kind="show" id="c8y-vB-OjO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -156,6 +159,9 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="FtJ-mu-xPy" kind="show" id="eQk-bQ-sD6"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="h4K-J5-f9p">
                                 <rect key="frame" x="0.0" y="40" width="375" height="66"/>
@@ -175,6 +181,17 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xF8-DC-Ayi">
+                                <rect key="frame" x="16" y="30" width="46" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="BcM-tm-PUZ"/>
+                                    <constraint firstAttribute="width" constant="46" id="wIG-Kg-Uf1"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="R60-Xn-N1d" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="zkm-mU-8ae"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -185,9 +202,11 @@
                             <constraint firstItem="c1r-q1-q36" firstAttribute="leading" secondItem="wRT-ed-sJg" secondAttribute="leading" constant="16" id="LvB-t5-n1U"/>
                             <constraint firstItem="h4K-J5-f9p" firstAttribute="top" secondItem="wRT-ed-sJg" secondAttribute="top" constant="20" id="McA-uA-DmP"/>
                             <constraint firstItem="ZZv-ci-7F3" firstAttribute="leading" secondItem="wRT-ed-sJg" secondAttribute="leading" id="Mcx-6N-KJN"/>
+                            <constraint firstItem="xF8-DC-Ayi" firstAttribute="leading" secondItem="wRT-ed-sJg" secondAttribute="leading" constant="16" id="X7S-je-T3g"/>
                             <constraint firstItem="ZZv-ci-7F3" firstAttribute="top" secondItem="0JR-s5-O0b" secondAttribute="top" id="ZP8-fZ-dbJ"/>
                             <constraint firstItem="8kD-JR-hQ6" firstAttribute="top" secondItem="h4K-J5-f9p" secondAttribute="bottom" constant="50" id="alp-v1-fNW"/>
                             <constraint firstItem="h4K-J5-f9p" firstAttribute="leading" secondItem="wRT-ed-sJg" secondAttribute="leading" id="lI5-bL-QpB"/>
+                            <constraint firstItem="xF8-DC-Ayi" firstAttribute="top" secondItem="wRT-ed-sJg" secondAttribute="top" constant="10" id="mEy-jl-nbD"/>
                             <constraint firstItem="wRT-ed-sJg" firstAttribute="trailing" secondItem="8kD-JR-hQ6" secondAttribute="trailing" constant="16" id="ofy-fs-6hF"/>
                             <constraint firstItem="ZZv-ci-7F3" firstAttribute="bottom" secondItem="wRT-ed-sJg" secondAttribute="bottom" id="rEp-oD-TO9"/>
                             <constraint firstItem="wRT-ed-sJg" firstAttribute="trailing" secondItem="c1r-q1-q36" secondAttribute="trailing" constant="16" id="xdm-EA-cEm"/>
@@ -196,8 +215,9 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SVY-jX-iTw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="R60-Xn-N1d" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="837.60000000000002" y="137.18140929535232"/>
+            <point key="canvasLocation" x="964" y="136"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="U2E-df-YIx">
@@ -294,10 +314,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BDi-MV-Ct1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1530.4000000000001" y="137.18140929535232"/>
+            <point key="canvasLocation" x="1774" y="137"/>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
