--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -88,10 +88,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="bgImg" destination="Se7-oa-Zvu" id="LVD-lZ-7IN"/>
-                        <outlet property="swoosh" destination="eAg-Q2-8MB" id="kcL-NN-D8t"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -160,7 +156,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="FtJ-mu-xPy" kind="show" id="eQk-bQ-sD6"/>
+                                    <action selector="onNextTapped:" destination="AbP-Hs-FVk" eventType="touchUpInside" id="BUo-So-6yg"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="h4K-J5-f9p">
@@ -213,6 +209,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wRT-ed-sJg"/>
                     </view>
+                    <connections>
+                        <segue destination="FtJ-mu-xPy" kind="show" identifier="skillViewControllerSeque" id="oaq-Yr-cYD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SVY-jX-iTw" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="R60-Xn-N1d" userLabel="Exit" sceneMemberID="exit"/>
